# Palimpsest

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
eval/: harness.py  judge.py
eval/datasets/locomo/: locomo10.json
eval/results/: phase1.json
scripts/: smoke_test.py
src/palimpsest/: __init__.py  db.py  embeddings.py  llm.py  models.py  vectors.py
src/palimpsest/read/: __init__.py  answer.py  retrieve.py
src/palimpsest/write/: __init__.py  extract.py  ingest.py
