[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "palimpsest"
version = "0.0.1"
description = "A local, from-scratch LLM memory system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.50,<3",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.8,<3",
  "python-dotenv>=1.0,<2",
  "qdrant-client>=1.12,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/palimpsest"]
